# dockerized-flaskr

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflows/: flaskr.yml  pythonapp.yml
flaskr/: auth.py  blog.py
